--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
 on:
   push:
     branches:
-      - main
+      - main # set a branch to deploy on
 
 jobs:
   build-and-push-to-gcr:
-    runs-on:
+    runs-on: ubuntu-22.04
     permissions:
       contents: 'read'
       id-token: 'write'
