--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,11 @@ jobs:
           project_id: 'cc-fall2024'
           workload_identity_provider: 'projects/584694283094/locations/global/workloadIdentityPools/github2/providers/dansc0de' # update with your Workload Identity Pool
           # service_account: 'github-actions@cc-fall2024.iam.gserviceaccount.com' # update with your ServiceAccount
-
+      - run: gcloud auth configure-docker us-central1-docker.pkg.dev/cc-fall2024/node-demo
       # login to GCR
-      - uses: docker/login-action@v3
-        with:
-          registry: gcr.io
-          username: oauth2accesstoken
-          password: ${{ steps.auth.outputs.auth_token }}
+#      - uses: docker/login-action@v3
+#        with:
+#          registry: gcr.io
+#          username: oauth2accesstoken
+#          password: ${{ steps.auth.outputs.auth_token }}
 
