--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,33 @@ jobs:
           project_id: 'cc-fall2024'
           workload_identity_provider: 'projects/584694283094/locations/global/workloadIdentityPools/github2/providers/dansc0de' # update with your Workload Identity Pool
           # service_account: 'github-actions@cc-fall2024.iam.gserviceaccount.com' # update with your ServiceAccount
-      - run: gcloud auth configure-docker us-central1-docker.pkg.dev/cc-fall2024/node-demo
-      # login to GCR
-#      - uses: docker/login-action@v3
-#        with:
-#          registry: gcr.io
-#          username: oauth2accesstoken
-#          password: ${{ steps.auth.outputs.auth_token }}
+
+      # configure docker
+      - name: gcloud Configure Docker
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev
+
+      # gcloud Auth
+      - name: gcloud Auth To gcr.io
+        run: >
+          gcloud auth print-access-token \
+          --impersonate-service-account github-actions@cc-fall2024.iam.gserviceaccount.com | docker login \
+          -u oauth2accesstoken \
+          --password-stdin https://us-central1-docker.pkg.dev
+
+      # setup docker buildx
+      - name: Setup docker buildx
+        uses: docker/setup-buildx@v3
+        with:
+          platforms: linux/amd64,linux/arm64
+
+      - name: Build and Push
+        uses: docker/build-push-action@v6
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: us-central1-docker.pkg.dev/cc-fall2024/dansc0de/node-demo:v1
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          provenance: false
 
