fixup --impersonate-service-account  flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: gcloud Auth To gcr.io
         run: >
           gcloud auth print-access-token \
-          --impersonate-service-account github-actions@cc-fall2024.iam.gserviceaccount.com | docker login \
+          --impersonate-service-account=github-actions@cc-fall2024.iam.gserviceaccount.com | docker login \
           -u oauth2accesstoken \
           --password-stdin https://us-central1-docker.pkg.dev
 
